Fix css to never have something behind the footer

--- a/app/css/welcome.css
+++ b/app/css/welcome.css
@@ -1,5 +1,6 @@
 body {
 	padding-top: 70px;
+	padding-bottom: 25px;
 	min-height: 200px;
 	background: #EBF1F5 !important;
 }
